--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"db:migrate": "npx prisma migrate dev",
 		"db:studio": "npx prisma studio",
 		"seed": "ts-node --project src/scripts/tsconfig.json src/scripts/seed-game-records.ts",
-		"postinstall": "prisma generate"
+		"postinstall": "prisma generate",
+		"email": "email dev -d src/emails"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.10.0",
@@ -20,6 +21,9 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.4",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
+		"@react-email/components": "^0.0.33",
+		"@react-email/tailwind": "1.0.4",
+		"@t3-oss/env-nextjs": "^0.12.0",
 		"@types/js-cookie": "^3.0.6",
 		"bcryptjs": "^2.4.3",
 		"class-variance-authority": "^0.7.1",
@@ -33,7 +37,9 @@
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-email": "^3.0.7",
 		"react-hook-form": "^7.54.2",
+		"resend": "^4.1.2",
 		"sonner": "^1.7.2",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
