--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@react-email/components": "^0.0.33",
+		"@react-email/render": "^1.0.5",
 		"@react-email/tailwind": "1.0.4",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@types/js-cookie": "^3.0.6",
